kcms/colors: Don't auto-select newly installed entry

This is inconsistent with other KCMs. It is redundant as KNS has a "use" button
within it's own dialog.

As we reload the model which may displace the active entry, we need to manually
re-select it.

BUG: 418102